--- a/galerie.html
+++ b/galerie.html
@@ -359,6 +359,7 @@ a {
           <span class="arrow">&#9654;</span>
         </button>
         <div class="gallery-folder-content">
+          <p>Schön hier, aber wart ihr schon mal im Paradies?</p>
           <div class="gallery-images">
             <img src="bild/paradi_tower.png" alt="" data-folder="galerie-server" data-title="Ein Haus am Spawn" data-author="Bild von Corotexus" data-desc="Der Heilige Paradise Tower">
             <img src="bild/paradi_plant.png" alt="" data-folder="galerie-server" data-title="Pflanzenparadies" data-author="Bild von Corotexus" data-desc="Einen Garten im Paradies. Natürlich mit Palme!">
@@ -372,21 +373,37 @@ a {
           <span class="arrow">&#9654;</span>
         </button>
         <div class="gallery-folder-content">
+          <p>Lasst euch von der ParadiseNetwork Community inspirieren!</p>
           <div class="gallery-images">
             <img src="Bildplatz" alt="Frei" data-folder="galerie-bauwerke">
             <img src="Bildplatz" alt="Frei" data-folder="galerie-bauwerke">
           </div>
         </div>
       </div>
-      <div class="gallery-folder" data-folder="galerie-3">
+      <div class="gallery-folder" data-folder="galerie-events">
         <button class="gallery-folder-header" type="button">
           <span>Events</span>
           <span class="arrow">&#9654;</span>
         </button>
         <div class="gallery-folder-content">
+          <p>Hier kommen die Highlights der Events!</p>
           <div class="gallery-images">
             <img src="Bildplatz" alt="Frei" data-folder="galerie-events">
             <img src="Bildplatz" alt="Frei" data-folder="galerie-events">
+          </div>
+        </div>
+      </div>
+    <div class="gallery-folder" data-folder="galerie-community">
+        <button class="gallery-folder-header" type="button">
+          <span>Eure Momente</span>
+          <span class="arrow">&#9654;</span>
+        </button>
+        <div class="gallery-folder-content">
+          <p>Eure Momente auf das sie niemals vergessen werden!</p>
+          <div class="gallery-images">
+            <img src="bild/gal/kirago_bedrock.png" alt="" data-folder="galerie-community" data-title="Der legendäre Bedrock-Block" data-author="Bild von Kirago" data-desc="Wer möchte Bedrock? Kirago hat ihn! Doch wie du ihn bekommst... das ist eine andere Geschichte.">
+            <img src="bild/gal/michi-endergroup.png" alt="" data-folder="galerie-community"  data-title="Die Endergroupies" data-author="Bild von Corotexus" data-desc="Wenn Endermen bei dir einziehen... Was ein Mob!">
+            <img src="bild/gal/dupz_xmas.png" alt="" data-folder="galerie-community"  data-title="Dupz im Weihnachtsrausch" data-author="Bild von xIDupz" data-desc="Mit der XMAS-25 Crate hat er sich schonmal in die Weihnachtliche Stimmung gezogen.">
           </div>
         </div>
       </div>
