--- a/galerie.html
+++ b/galerie.html
@@ -404,6 +404,8 @@ a {
             <img src="bild/gal/kirago_bedrock.png" alt="" data-folder="galerie-community" data-title="Der legendäre Bedrock-Block" data-author="Bild von Kirago" data-desc="Wer möchte Bedrock? Kirago hat ihn! Doch wie du ihn bekommst... das ist eine andere Geschichte.">
             <img src="bild/gal/michi-endergroup.png" alt="" data-folder="galerie-community"  data-title="Die Endergroupies" data-author="Bild von Corotexus" data-desc="Wenn Endermen bei dir einziehen... Was ein Mob!">
             <img src="bild/gal/dupz_xmas.png" alt="" data-folder="galerie-community"  data-title="Dupz im Weihnachtsrausch" data-author="Bild von xIDupz" data-desc="Mit der XMAS-25 Crate hat er sich schonmal in die Weihnachtliche Stimmung gezogen.">
+            <img src="bild/gal/derder_drachenschwert.png" alt="" data-folder="galerie-community"  data-title="Enlich auch ein Drachenschwert" data-author="Bild von derder69" data-desc="Nach vielen Crates endlich ein Drachenschwert gezogen da freut sich jeder!">
+            <img src="bild/gal/marvin_besuch.png" alt="" data-folder="galerie-community"  data-title="Freunde besuchen einander" data-author="Bild von Corotexus" data-desc="Ein kleiner Besuch bei Marvin uns seinen Freunden, in seinem Paradies...oder doch schon ein Königreich?">
           </div>
         </div>
       </div>
